--- a/about/index.html
+++ b/about/index.html
@@ -72,17 +72,22 @@
                     <div class="items">
                         <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
                             <img src="/pictures/profile_use/education/ck_seal.png" alt="建國中學校徽">
-                            <div class="title zhw">建國中學</div>
-                            <div class="description zhw">2021/09~2024/06</div>
+                            <div class="itemcontent zhw">
+                                <p class="title">臺北市立建國高級中學</p>
+                                <p class="description">2021/09~2024/06</p>
+                            </div>
+                        </a>
                         </a>
                     </div>
                     <h3 class="zhw" id="experience">經歷</h3>
                     <div class="items">
-                        <a class="item" href="https://www.instagram.com/infor.35th/" target="_blank">
+                        <a class="item" href="https://35.infor.org" target="_blank">
                             <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th社徽">
-                            <div class="title zhw">建中資訊社35th</div>
-                            <div class="description zhw">內務</div>
-                            <div class="description zhw">2023/02~2023/07</div>
+                            <div class="itemcontent zhw">
+                                <p class="title">建國中學資訊社35th</p>
+                                <p class="description">內務</p>
+                                <p class="description">2023/02~2023/07</p>
+                            </div>
                         </a>
                     </div>
                     <h3 class="zhw" id="skill">技能</h3>
