--- a/en/index.html
+++ b/en/index.html
@@ -58,12 +58,7 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="enw3">BlueBoy Space</span>
-            </p>
-        </div>
-        <div class="pagesubtitle" id="introtitle">
-            <p>
-                <span class="enw1">My Profile</span>
+                <span class="enw3">About Me</span>
             </p>
         </div>
         <div class="content" id="profilec">
@@ -76,17 +71,21 @@
                 <div class="items">
                     <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
                         <img src="/pictures/profile_use/education/ck_seal.png" alt="Chien Kuo High School's seal">
-                        <div class="title enw2">Chien Kuo High School</div>
-                        <div class="description enw2">2021/09~2024/06</div>
+                        <div class="itemcontent enw2">
+                            <p class="title">Taipei Municipal Chien Kuo High School</p>
+                            <p class="description">2021/09~2024/06</p>
+                        </div>
                     </a>
                 </div>
                 <h3 class="enw2" id="experience">Experience</h3>
                 <div class="items">
-                    <a class="item" href="https://www.instagram.com/infor.35th/" target="_blank">
+                    <a class="item" href="https://35.infor.org" target="_blank">
                         <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th's seal">
-                        <div class="title enw2">INFOR 35th</div>
-                        <div class="description enw2">Officer of Intra-Association Affair Department</div>
-                        <div class="description enw2">2023/02~2023/07</div>
+                        <div class="itemcontent enw2">
+                            <p class="title">INFOR 35th</p>
+                            <p class="description">Intra-Association Affair Department</p>
+                            <p class="description">2023/02~2023/07</p>
+                        </div>
                     </a>
                 </div>
                 <h3 class="enw2" id="skill">Skill</h3>
@@ -132,15 +131,10 @@
                 <details>
                     <summary class="enw2">Other platforms</summary>
                     <ul>
-                        <li class="enw2"><a href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">ZeroJudge</a></li>
-                        <li class="enw2"><a href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">TIOJ</a></li>
+                        <li class="enw2"><a href="https://github.com/blueboy247" target="_blank">GitHub</a></li>
                         <li class="enw2"><a href="https://play.picoctf.org/users/shuba247">picoCTF</a></li>
                     </ul>
                 </details>
-                <h3 class="enw2" id="project">Projects</h3>
-                <div class="items" id="projectitems">
-                    <a class="item" href="https://github.com/BlueBoy247?tab=repositories" style="height: fit-content;">View on My GitHub</a>
-                </div>
                 <hr style="background-color: #2d726b; height: 3px; margin: 3% 0%;">
                 <h3 class="enw2" id="contact">Contact</h3>
                 <div id="form">
@@ -182,66 +176,6 @@
                     </form>
                 </div>
             </div>
-        </div>
-        <div id="aboutsite">
-            <div class="pagesubtitle" id="websitet">
-                <p>
-                    <span class="enw1">Website Development Notes</span>
-                </p>
-            </div>
-            <div class="content" id="websitec">
-                <div id="websiteblock">
-                    <table id="webtime">
-                        <caption>Website Development Notes</caption>
-                        <tr id="webtimetitle">
-                            <th class="time enw1">Date</th>
-                            <th class="event enw1" style="text-align: left;">Content</th>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2024-04-26</td>
-                            <td class="event enw2">Finished the Responsive Web Design (RWD) for the website</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-06-05</td>
-                            <td class="event enw2">Published English version of the website</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-04-28</td>
-                            <td class="event enw2">Completed JavaScript code for posting articles</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-03-29</td>
-                            <td class="event enw2">Completed setup of the contact form</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-03-26</td>
-                            <td class="event enw2">Completed second version CSS design for the website and officially published the website named "BlueBoy's Space"</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-28</td>
-                            <td class="event enw2">Completed first version CSS design for the website</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-19</td>
-                            <td class="event enw2">Published <a href="https://blueboy247.github.io/website_old_ver/" target="_blank">test website</a> named "Allen Chang's Website"</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-18</td>
-                            <td class="event enw2">Completed HTML code for the website</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-13</td>
-                            <td class="event enw2">Completed planning for the website architecture</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="countdown" style="margin-bottom: 20px;">
-            <script async src="/scripts/countdownSUBARU.js"></script>
-            <a data-type="countdown" data-id="3885131" class="tickcounter" title="Countdown" href="https://www.tickcounter.com/">
-                Countdown(oozora_subaru_BD)
-            </a>
         </div>
         <script>
             var textarea = document.querySelector('textarea');
