Updated index page

--- a/index.html
+++ b/index.html
@@ -29,6 +29,11 @@
     <meta name="google-adsense-account" content="ca-pub-9189513725790874">
     <!-- other source -->
     <link rel="stylesheet" href="/styles/index.css">
+    <style>
+        .countdown{
+            margin-bottom: 20px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -59,7 +64,7 @@
     <main>
         <div class="pagehead">
             <p class="pagetitle">
-                <span class="enw3">BlueBoy Space</span>
+                <span class="enw3">BlueBoy's Space</span>
             </p>
         </div>
         <div id="announcement">
@@ -72,58 +77,17 @@
                 <p class="zhwb">目前暫無公告......</p>
             </div>
         </div>
-        <div id="aboutsite">
-            <div class="pagesubtitle" id="websitet">
-                <p>
-                    <span class="zhwb">網站建置記事</span>
-                </p>
-            </div>
-            <div class="content" id="websitec">
-                <div id="websiteblock">
-                    <table id="webtime">
-                        <caption>網站建置記事</caption>
-                        <tr id="webtimetitle">
-                            <th class="time zhwb">時間</th>
-                            <th class="event zhwb" style="text-align: left;">事項</th>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2024-04-26</td>
-                            <td class="event zhw">完成網站響應式設計(RWD)</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-06-05</td>
-                            <td class="event zhw">完成英文版頁面</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-04-28</td>
-                            <td class="event zhw">完成文章發布之JavaScript</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-03-29</td>
-                            <td class="event zhw">聯絡表單建置完成</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-03-26</td>
-                            <td class="event zhw">完成第二版CSS設計，正式版網站「BlueBoy's Space」上線</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-19</td>
-                            <td class="event zhw">完成第一版CSS設計，<a href="https://blueboy247.github.io/website_old_ver/" target="_blank">測試版網站</a>「Allen Chang's Website」上線</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-18</td>
-                            <td class="event zhw">完成HTML撰寫</td>
-                        </tr>
-                        <tr>
-                            <td class="time enw3">2023-02-13</td>
-                            <td class="event zhw">完成網站架構之規劃</td>
-                        </tr>
-                    </table>
-                </div>
-            </div>
-        </div>
-        <div class="countdown" style="margin-bottom: 20px;">
-            <script async src="/scripts/countdownSUBARU.js"></script>
+        <div class="countdown">
+            <script defer type="text/javascript">
+                (function(d, s, id) {
+                    let js, pjs = d.getElementsByTagName(s)[0];
+                    if (d.getElementById(id)) return;
+                    js = d.createElement(s);
+                    js.id = id;
+                    js.src = "https://www.tickcounter.com/static/js/loader.js";
+                    pjs.parentNode.insertBefore(js, pjs);
+                }(document, "script", "tickcounter-sdk"));
+            </script>
             <a data-type="countdown" data-id="3885131" class="tickcounter" title="Countdown" href="https://www.tickcounter.com/">
                 Countdown(oozora_subaru_BD)
             </a>
