--- a/index.html
+++ b/index.html
@@ -27,6 +27,8 @@
     </script>
     <!-- Google AdSense -->
     <meta name="google-adsense-account" content="ca-pub-9189513725790874">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9189513725790874"
+     crossorigin="anonymous"></script>
     <!-- other source -->
     <link rel="stylesheet" href="/styles/index.css">
     <style>
