--- a/about/index.html
+++ b/about/index.html
@@ -67,7 +67,7 @@
                 <div id="introblock">
                     <h2 class="zhw">Allen Chang</h2>
                     <hr>
-                    <p class="zhw">一名弱弱的高中生，嘗試<a href="#links">獨立接案</a>中。</p>
+                    <p class="zhw">一名弱弱的高中生。</p>
                     <p class="zhw">英文大概 CEFR B1 程度，日文約 JLPT N4 程度，韓文和德文還是初學。</p>
                     <p class="zhw">目前正在學習全端開發、外掛程式與手機應用開發、物聯網、機器學習及資安技術。</p>
                     <h3 class="zhw" id="education">學歷</h3>
@@ -132,14 +132,14 @@
                             <img src="https://atcoder.junah.dev/v2/generate_badge?name=shuba247" alt="AtCoder Stats">
                         </a>
                     </details>
-                    <details>
+                    <!--details>
                         <summary class="zhw">接案平台</summary>
                         <ul>
                             <li class="zhw"><a href="https://www.tasker.com.tw/workroom/nJjPr6">Tasker 出任務</a></li>
                             <li class="zhw"><a href="https://www.pro360.com.tw/service/466549">PRO360 達人網</a></li>
                             <li class="zhw"><a href="https://case.1111.com.tw/FindTalent/TalentInfo?Id=4202404280008">CASE+外包網</a></li>
                         </ul>
-                    </details>
+                    </details-->
                     <details>
                         <summary class="zhw">其它平台</summary>
                         <ul>
