Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -67,8 +67,8 @@
                 <div id="introblock">
                     <h2 class="zhw">Allen Chang</h2>
                     <hr>
-                    <p class="zhw">一名弱弱的高中生。</p>
-                    <p class="zhw">英文大概 CEFR B1 程度，日文約 JLPT N4 程度，韓文和德文還是初學。</p>
+                    <p class="zhw">一名正在努力不爆肝的大學生。</p>
+                    <!--p class="zhw">英文大概 CEFR B1 程度，日文約 JLPT N4 程度，韓文和德文還是初學。</p-->
                     <p class="zhw">目前正在學習全端開發、外掛程式與手機應用開發、物聯網、機器學習及資安技術。</p>
                     <h3 class="zhw" id="education">學歷</h3>
                     <div class="items">
@@ -79,6 +79,13 @@
                                 <p class="description">2021/09~2024/06</p>
                             </div>
                         </a>
+                        <a class="item" href="https://cs.utaipei.edu.tw/" target="_blank">
+                            <img src="/pictures/profile_use/education/utaipei_seal.png" alt="臺北市立大學校徽">
+                            <div class="itemcontent zhw">
+                                <p class="title">臺北市立大學</p>
+                                <p class="description">資訊科學系</p>
+                                <p class="description">2024/09~</p>
+                            </div>
                         </a>
                     </div>
                     <h3 class="zhw" id="experience">經歷</h3>
