--- a/en/index.html
+++ b/en/index.html
@@ -67,8 +67,8 @@
             <div id="introblock">
                 <h2 class="enw2">Allen Chang</h2>
                 <hr>
-                <p class="enw2">A high school student living in the Republic of China, the country that also known as Taiwan.</p>
-                <p class="enw2">I'm currently learning full-stack devolopment, plugins and mobile applications devolopment, IoT, machine learning and cybersecurity.</p>
+                <p class="enw2">A college student living in the Republic of China, the country that is also known as Taiwan.</p>
+                <p class="enw2">I'm now focusing on full-stack devolopment, plugin and mobile application development, IoT, machine learning, and cybersecurity.</p>
                 <h3 class="enw2" id="education">Education</h3>
                 <div class="items">
                     <a class="item" href="https://www.ck.tp.edu.tw/" target="_blank">
@@ -76,6 +76,14 @@
                         <div class="itemcontent enw2">
                             <p class="title">Taipei Municipal Chien Kuo High School</p>
                             <p class="description">2021/09~2024/06</p>
+                        </div>
+                    </a>
+                    <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=en" target="_blank">
+                        <img src="/pictures/profile_use/education/utaipei_seal.png" alt="University of Taipei's seal">
+                        <div class="itemcontent enw2">
+                            <p class="title">University of Taipei</p>
+                            <p class="description">Department of Computer Science</p>
+                            <p class="description">2024/09~</p>
                         </div>
                     </a>
                 </div>
