--- a/about/index.html
+++ b/about/index.html
@@ -142,9 +142,9 @@
                     <!--details>
                         <summary class="zhw">接案平台</summary>
                         <ul>
-                            <li class="zhw"><a href="https://www.tasker.com.tw/workroom/nJjPr6">Tasker 出任務</a></li>
-                            <li class="zhw"><a href="https://www.pro360.com.tw/service/466549">PRO360 達人網</a></li>
-                            <li class="zhw"><a href="https://case.1111.com.tw/FindTalent/TalentInfo?Id=4202404280008">CASE+外包網</a></li>
+                            <li class="zhw"><a href="https://www.tasker.com.tw/workroom/nJjPr6" target="_blank">Tasker 出任務</a></li>
+                            <li class="zhw"><a href="https://www.pro360.com.tw/service/466549" target="_blank">PRO360 達人網</a></li>
+                            <li class="zhw"><a href="https://case.1111.com.tw/FindTalent/TalentInfo?Id=4202404280008" target="_blank">CASE+外包網</a></li>
                         </ul>
                     </details-->
                     <details>
@@ -152,7 +152,7 @@
                         <ul>
                             <li class="zhw"><a href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">ZeroJudge</a></li>
                             <li class="zhw"><a href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">TIOJ</a></li>
-                            <li class="zhw"><a href="https://play.picoctf.org/users/shuba247">picoCTF</a></li>
+                            <li class="zhw"><a href="https://play.picoctf.org/users/shuba247" target="_blank">picoCTF</a></li>
                         </ul>
                     </details>
                     <h3 class="zhw" id="project">專案</h3>
