--- a/en/index.html
+++ b/en/index.html
@@ -142,7 +142,7 @@
                     <summary class="enw2">Other platforms</summary>
                     <ul>
                         <li class="enw2"><a href="https://github.com/blueboy247" target="_blank">GitHub</a></li>
-                        <li class="enw2"><a href="https://play.picoctf.org/users/shuba247">picoCTF</a></li>
+                        <li class="enw2"><a href="https://play.picoctf.org/users/shuba247" target="_blank">picoCTF</a></li>
                     </ul>
                 </details>
                 <hr style="background-color: #2d726b; height: 3px; margin: 3% 0%;">
