Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -143,6 +143,8 @@
                         <ul>
                             <li class="zhw"><a href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">ZeroJudge</a></li>
                             <li class="zhw"><a href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">TIOJ</a></li>
+                            <li class="zhw"><a href="https://www.hackerrank.com/profile/Shuba247" target="_blank">HackerRank</a></li>
+                            <li class="zhw"><a href="https://leetcode.com/u/Shuba247/" target="_blank">LeetCode</a></li>
                             <li class="zhw"><a href="https://play.picoctf.org/users/shuba247" target="_blank">picoCTF</a></li>
                         </ul>
                     </details>
