--- a/en/index.html
+++ b/en/index.html
@@ -75,15 +75,15 @@
                         <img src="/pictures/profile_use/education/ck_seal.png" alt="Chien Kuo High School's seal">
                         <div class="itemcontent enw2">
                             <p class="title">Taipei Municipal Chien Kuo High School</p>
-                            <p class="description">2021/09~2024/06</p>
+                            <p class="description">Sep 2021 ~ Jun 2024</p>
                         </div>
                     </a>
                     <a class="item" href="https://cs.utaipei.edu.tw/index.php?Lang=en" target="_blank">
                         <img src="/pictures/profile_use/education/utaipei_seal.png" alt="University of Taipei's seal">
                         <div class="itemcontent enw2">
                             <p class="title">University of Taipei</p>
-                            <p class="description">Department of Computer Science</p>
-                            <p class="description">2024/09~</p>
+                            <p class="description">Computer Science, BS</p>
+                            <p class="description">Sep 2024 ~ Present</p>
                         </div>
                     </a>
                 </div>
@@ -94,7 +94,7 @@
                         <div class="itemcontent enw2">
                             <p class="title">INFOR 35th</p>
                             <p class="description">Intra-Association Affair Department</p>
-                            <p class="description">2023/02~2023/07</p>
+                            <p class="description">Feb 2023 ~ Jul 2023</p>
                         </div>
                     </a>
                 </div>
@@ -142,6 +142,8 @@
                     <summary class="enw2">Other platforms</summary>
                     <ul>
                         <li class="enw2"><a href="https://github.com/blueboy247" target="_blank">GitHub</a></li>
+                        <li class="enw2"><a href="https://www.hackerrank.com/profile/Shuba247" target="_blank">HackerRank</a></li>
+                        <li class="enw2"><a href="https://leetcode.com/u/Shuba247/" target="_blank">LeetCode</a></li>
                         <li class="enw2"><a href="https://play.picoctf.org/users/shuba247" target="_blank">picoCTF</a></li>
                     </ul>
                 </details>
