Update about page

--- a/en/index.html
+++ b/en/index.html
@@ -93,7 +93,7 @@
                         <img src="/pictures/profile_use/experience/infor35th.png" alt="INFOR35th's seal">
                         <div class="itemcontent enw2">
                             <p class="title">INFOR 35th</p>
-                            <p class="description">Intra-Association Affair Department</p>
+                            <p class="description">Internal Affairs Officer</p>
                             <p class="description">Feb 2023 ~ Jul 2023</p>
                         </div>
                     </a>
