Update about page

--- a/about/index.html
+++ b/about/index.html
@@ -75,7 +75,7 @@
                             <img src="/pictures/profile_use/education/ck_seal.png" alt="建國中學校徽">
                             <div class="itemcontent zhw">
                                 <p class="title">臺北市立建國高級中學</p>
-                                <p class="description">2021/09~2024/06</p>
+                                <p class="description">2021/09 ~ 2024/06</p>
                             </div>
                         </a>
                         <a class="item" href="https://cs.utaipei.edu.tw/" target="_blank">
@@ -83,7 +83,7 @@
                             <div class="itemcontent zhw">
                                 <p class="title">臺北市立大學</p>
                                 <p class="description">資訊科學系</p>
-                                <p class="description">2024/09~</p>
+                                <p class="description">2024/09 ~ 2028/06</p>
                             </div>
                         </a>
                     </div>
@@ -94,7 +94,7 @@
                             <div class="itemcontent zhw">
                                 <p class="title">建國中學資訊社35th</p>
                                 <p class="description">內務</p>
-                                <p class="description">2023/02~2023/07</p>
+                                <p class="description">2023/02 ~ 2023/07</p>
                             </div>
                         </a>
                     </div>
@@ -126,28 +126,44 @@
                         </div>
                     </div>
                     <h3 class="zhw" id="links">個人連結</h3>
-                    <details>
-                        <summary class="zhw">Codeforces</summary>
-                        <a href="https://codeforces.com/profile/shuba247" target="_blank">
-                            <img src="https://codeforces-readme-stats.vercel.app/api/card?username=shuba247&theme=github_dark&disable_animations=false&show_icons=true&force_username=true" alt="Codeforces Stats">
+                    <div class="smallitems">
+                        <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
+                            <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
+                            <div class="title zhw">Codeforces</div>
                         </a>
-                    </details>
-                    <details>
-                        <summary class="zhw">AtCoder</summary>
-                        <a href="https://atcoder.jp/users/Shuba247" target="_blank">
-                            <img src="https://atcoder.junah.dev/v2/generate_badge?name=shuba247" alt="AtCoder Stats">
+                        <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
+                            <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
+                            <div class="title zhw">AtCoder</div>
                         </a>
-                    </details>
-                    <details>
-                        <summary class="zhw">其它平台</summary>
-                        <ul>
-                            <li class="zhw"><a href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">ZeroJudge</a></li>
-                            <li class="zhw"><a href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">TIOJ</a></li>
-                            <li class="zhw"><a href="https://www.hackerrank.com/profile/Shuba247" target="_blank">HackerRank</a></li>
-                            <li class="zhw"><a href="https://leetcode.com/u/Shuba247/" target="_blank">LeetCode</a></li>
-                            <li class="zhw"><a href="https://play.picoctf.org/users/shuba247" target="_blank">picoCTF</a></li>
-                        </ul>
-                    </details>
+                        <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
+                            <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
+                            <div class="title zhw">LinkedIn</div>
+                        </a>
+                        <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
+                            <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
+                            <div class="title zhw">GitRoll</div>
+                        </a>
+                        <a class="item" href="https://zerojudge.tw/UserStatistic?id=185068" target="_blank">
+                            <img src="/pictures/profile_use/link/zerojudge.svg" alt="ZeroJudge logo">
+                            <div class="title zhw">ZeroJudge</div>
+                        </a>
+                        <a class="item" href="https://tioj.ck.tp.edu.tw/users/allen247" target="_blank">
+                            <img src="/pictures/profile_use/link/tioj.svg" alt="TIOJ logo">
+                            <div class="title zhw">TIOJ</div>
+                        </a>
+                        <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
+                            <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo">
+                            <div class="title zhw">HackerRank</div>
+                        </a>
+                        <a class="item" href="https://leetcode.com/u/Shuba247/" target="_blank">
+                            <img src="/pictures/profile_use/link/leetcode.svg" alt="LeetCode logo">
+                            <div class="title zhw">LeetCode</div>
+                        </a>
+                        <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
+                            <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
+                            <div class="title zhw">picoCTF</div>
+                        </a>
+                    </div>
                     <h3 class="zhw" id="project">專案</h3>
                     <div class="items" id="projectitems">
                         <a class="item zhw" href="./project.html" style="height: fit-content;">點此查看</a>
