--- a/en/index.html
+++ b/en/index.html
@@ -125,28 +125,41 @@
                         <div class="title enw2">Arduino</div>
                     </div>
                 </div>
-                <h3 class="enw2" id="programming">Links</h3>
-                <details>
-                    <summary class="enw2">Codeforces</summary>
-                    <a href="https://codeforces.com/profile/shuba247" target="_blank">
-                        <img src="https://codeforces-readme-stats.vercel.app/api/card?username=shuba247&theme=github_dark&disable_animations=false&show_icons=true&force_username=true" alt="Codeforces Stats">
+                <h3 class="enw2" id="links">Links</h3>
+                <div class="smallitems">
+                    <a class="item" href="https://codeforces.com/profile/shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/codeforces.svg" alt="Codeforces logo">
+                        <div class="title enw2">Codeforces</div>
                     </a>
-                </details>
-                <details>
-                    <summary class="enw2">AtCoder</summary>
-                    <a href="https://atcoder.jp/users/Shuba247" target="_blank">
-                        <img src="https://atcoder.junah.dev/v2/generate_badge?name=shuba247" alt="AtCoder Stats">
+                    <a class="item" href="https://atcoder.jp/users/Shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/atcoder.svg" alt="AtCoder logo">
+                        <div class="title enw2">AtCoder</div>
                     </a>
-                </details>
-                <details>
-                    <summary class="enw2">Other platforms</summary>
-                    <ul>
-                        <li class="enw2"><a href="https://github.com/blueboy247" target="_blank">GitHub</a></li>
-                        <li class="enw2"><a href="https://www.hackerrank.com/profile/Shuba247" target="_blank">HackerRank</a></li>
-                        <li class="enw2"><a href="https://leetcode.com/u/Shuba247/" target="_blank">LeetCode</a></li>
-                        <li class="enw2"><a href="https://play.picoctf.org/users/shuba247" target="_blank">picoCTF</a></li>
-                    </ul>
-                </details>
+                    <a class="item" href="https://www.linkedin.com/in/allenchang247" target="_blank">
+                        <img src="/pictures/profile_use/link/linkedin.svg" alt="LinkedIn logo">
+                        <div class="title enw2">LinkedIn</div>
+                    </a>
+                    <a class="item" href="https://github.com/BlueBoy247" target="_blank">
+                        <img src="/pictures/profile_use/link/github.svg" alt="GitHub logo">
+                        <div class="title enw2">GitHub</div>
+                    </a>
+                    <a class="item" href="https://gitroll.io/profile/uC0VuSxBplmRPBkxXoFcO7zl1rL43" target="_blank">
+                        <img src="/pictures/profile_use/link/gitroll.svg" alt="GitRoll logo">
+                        <div class="title enw2">GitRoll</div>
+                    </a>
+                    <a class="item" href="https://www.hackerrank.com/profile/Shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/hackerrank.svg" alt="HackerRank logo">
+                        <div class="title enw2">HackerRank</div>
+                    </a>
+                    <a class="item" href="https://leetcode.com/u/Shuba247/" target="_blank">
+                        <img src="/pictures/profile_use/link/leetcode.svg" alt="LeetCode logo">
+                        <div class="title enw2">LeetCode</div>
+                    </a>
+                    <a class="item" href="https://play.picoctf.org/users/shuba247" target="_blank">
+                        <img src="/pictures/profile_use/link/picoctf.svg" alt="picoCTF logo">
+                        <div class="title enw2">picoCTF</div>
+                    </a>
+                </div>
                 <hr style="background-color: #2d726b; height: 3px; margin: 3% 0%;">
                 <h3 class="enw2" id="contact">Contact</h3>
                 <div id="form">
